--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@
   left: 0;
   top: 0;
   opacity: 0;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   transition: opacity .4s ease-in;
 }
 
