--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
   animation: 1.3s infinite ellipse;
 }
 
-.pdf {
+.pages {
   position: absolute;
   left: 0;
   top: 0;
@@ -127,7 +127,7 @@
   transition: opacity .4s ease-in;
 }
 
-.pdf_show {
+.pages_show {
   opacity: 1;
   z-index: 1000;
 }
