--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@
 	width: 47px;
 	height: 47px;
   opacity: var(--opacityIcon);
+  background-color: transparent;
 	background-image: var(--linkIcon, url('./images/icon.svg'));
 	border-radius: 50%;
 	cursor: pointer;
