--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .middle {
   width: 200px;
   transition: margin-right .8s ease-in;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   margin-right: 10px;
 }
 
@@ -162,4 +162,6 @@
   border: none;
 }
 
-
+.hidden_link {
+  opacity: 0;
+}
